<resources>
    <string name="app_name">蚂蚁兼职</string>
    <string name="action_settings">Settings</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="msg_load_ing">加载中...</string>
     <string name="active_code_is_not_empty">激活码不能为空</string>
    <string name="sms_code_is_not_empty">验证码不能为空</string>
    <string name="password_is_not_empty">密码不能为空</string>
    <string name="password6">密码长度必须大于6位</string>
    <string name="new_password_is_not_empty">新密码不能为空</string>
    <string name="password_must_same">两次密码输入不同、请重新输入</string>
    <string name="username_is_not_empty">手机号不能为空</string>
    <string name="username_empty">用户名不能为空</string>
    <string name="login_password_error">用户名或者密码错误</string>
    <string name="password_tooshort">密码长度必须大于或等于4位</string>
    <string name="sms_code_error">验证码获取次数已达上限</string>
    <string name="school_is_not_empty">学校不能为空</string>
    <string name="synopsis_is_not_empty">个人简介不能为空</string>
    <string name="reg_err">注册失败</string>
    <string name="reg_ok">注册成功</string>
    <string name="nologin">您还未登录，请先登录!</string>
    <string name="wander_empty">意向不能为空</string>
    <string name="login_err">登陆失败</string>
    <string name="zfb_empty">支付宝账号不能为空!</string>
    <string name="zfb_email">请输入支付宝邮箱账号</string>
    <string name="realname_empty">真实姓名不能为空!</string>
    <string name="phonechg_ok">电话号码修改成功</string>
    <string name="phonechg_bad">电话号码修改失败</string>
    <string name="pwd_err">密码错误</string>
    <string name="phone_lengthless">您输入的手机号必须是11位!</string>
    <string name="finish_personmsg">请先到个人中心完善用户信息</string>
    <string name="js">[{partJobName:其它,partJobId:12}]</string>
    <string name="inputname">请输入你的姓名</string>
    <string name="making">攻城狮还未攻破，敬请期待!</string>
    <string name="am_tip">对方来自遥远的火星，你无法与他通信!</string>
    <string name="user_nameError">请正确填写姓名</string>
    <string name="date_today">今天</string>
    <string name="date_yesterday">昨天</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="comnyname">苏州跑跑软件科技有限公司</string>
    <string name="gps_disable">蜜蜂君定位不到你的位置，请确认你打开了GPS哦！</string>
    <string name="pp">全国最诚信的大学生兼职平台</string>
    <string name="pic">pic</string>
    <string name="tip">提示</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="update_tip">更新提示</string>
    <string name="cancel2">下次再说</string>
    <string name="extract_wait">攒攒再提</string>
    <string name="cancel_now">现在就提</string>
    <string name="nd_cancel">以后再说</string>
    <string name="main_title">跑跑兼职个人版</string>
    <string name="teache_job">家教</string>
    <string name="other_job">其他兼职</string>
    <string name="notice_job">消息</string>
    <string name="trace_job">我的兼职</string>
    <string name="my_lychee">个人中心</string>
    <string name="report">举报</string>
    <string name="familyeducation">兼职分类</string>
    <string name="back_text">返回</string>
    <string name="jobdetail">详情</string>
    <string name="map_title">地图</string>
    <string name="regist_title">注册</string>
    <string name="regist_message">完善个人信息</string>
    <string name="wander_title">意向(可多选)</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="get_validate_code">获取验证码</string>
    <string name="myhome">个人中心</string>
    <string name="setting">设置</string>
    <string name="mod_phone">电话号码修改</string>
    <string name="mod_school">学校修改</string>
    <string name="mod_synopsis">简介修改</string>
    <string name="mod_name">昵称修改</string>
    <string name="mod_height">身高修改</string>
    <string name="mod_weight">体重修改</string>
    <string name="notice">通知</string>
    <string name="myjob">职位管理</string>
    <string name="approveatatus">认证学生证</string>
    <string name="companyalljob">该公司所有职位</string>
    <string name="feedback">用户反馈</string>
    <string name="my_job">领工资</string>
    <string name="me">我</string>
    <string name="wage_list">工资单</string>
    <string name="my_wallet">我的钱包</string>
    <string name="bind_zhifu">绑定支付宝收款账户</string>
    <string name="del_bind_title">解除关联</string>
    <string name="clean">清空</string>
    <string name="webview">活动</string>
    <string name="userprotocal">用户协议</string>
    <string name="present">我的礼包</string>
    <string name="alipay">提现说明</string>
    <string name="example">照片示例</string>
    <string name="approve_tips">"请拍摄学生证照片，内容应包含学校，姓名等信息。
（学生证仅用于后台审核，跑跑兼职不会公开你的任何学生证信息的哦）"</string>
    <string name="push_job">适合你的兼职</string>
    <string name="province_msg">选择城市</string>
    <string name="fuzzy_search">请输入搜索关键字</string>
    <string name="city_serch">输入城市名</string>
    <string name="school_serch">输入并搜索你的学校名</string>
    <string name="me_st">个人简历</string>
    <string name="job_applt_prgs">兼职申请进度</string>
    <string name="freetime_title">空闲时间</string>
    <string name="othermsgmdf">其他资料</string>
    <string name="inout_list">收支明细(元)</string>
    <string name="next_step">下一步</string>
    <string name="add">添加</string>
    <string name="wanchen">完成</string>
    <string name="commit">提交</string>
    <string name="sc">职位收藏</string>
    <string name="sq">申请</string>
    <string name="jl">浏览记录</string>
    <string name="skip">跳过</string>
    <string name="prepare_pay">待结算</string>
    <string name="aliyPay_get">待收款</string>
    <string name="already_pay_nocommentary">待评论</string>
    <string name="already_paycommentary">已评论</string>
    <string name="shure_pay">确认已结算</string>
    <string name="tikuan">提款中</string>
    <string name="job_opportunity">兼职机会</string>
    <string name="employ_notice">录用通知</string>
    <string name="sys_notice">系统通知</string>
    <string name="bind">关联收款账户</string>
    <string name="bind_r">立即关联</string>
    <string name="get_wage">收款账户</string>
    <string name="luyong">已同意</string>
    <string name="refuse">已拒绝</string>
    <string name="md_password">修改密码</string>
    <string name="cmt_stu">提交验证</string>
    <string name="confirm1">一，包含学校，姓名等信息的校园卡</string>
    <string name="confirm2">二，拍摄学生证内页，如果学生证内页没有学校名称可以将另外一张学生证封面叠在一起拍摄哦，这样学校信息，姓名信息就全啦！</string>
    <string name="confrirm_or">或</string>
    <string name="delete">删除</string>
    <string name="like_name">我的关注</string>
    <string name="serch_btn">搜索</string>
    <string name="main_function_btn">首页</string>
    <string name="credit_job_btn">兼职</string>
    <string name="other_job_btn">其他推荐</string>
    <string name="setting_btn">我</string>
    <string name="wander_jiajiao">家教</string>
    <string name="wander_liyi">礼仪</string>
    <string name="wander_cuxiao">促销</string>
    <string name="wander_fanyi">翻译</string>
    <string name="wander_kefu">客服</string>
    <string name="wander_yanchu">演出</string>
    <string name="wander_model">模特</string>
    <string name="wander_paidan">派单</string>
    <string name="wander_wenyuan">文员</string>
    <string name="wander_sheji">设计</string>
    <string name="wander_fuwu">服务员</string>
    <string name="wander_other">其他</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="load_mode_label">加载更多</string>
    <string name="pull_to_refresh_load_label">上拉加载更多</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_update_time_label">上次更新时间</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新...</string>
    <string name="pull_to_refresh_loading_label">正在加载...</string>
    <string name="pull_to_refresh_complete">刷新完成</string>
    <string name="refresh_point">下拉刷新</string>
    <string name="refresh_point2">上拉加载</string>
    <string name="refresh_title">请释放 刷新</string>
    <string name="refresh_return">松开返回</string>
    <string name="refresh_running">正在刷新中...</string>
    <string name="refresh_competed">刷新完毕</string>
    <string name="oldPassword">输入旧密码</string>
    <string name="phone_hint">手机号</string>
    <string name="invite_hint">邀请码</string>
    <string name="newphone_hint">新手机号</string>
    <string name="captcha_hint">输入验证码</string>
    <string name="password_hint">密码</string>
    <string name="repassword_hint">确认密码</string>
    <string name="user_name">姓名</string>
    <string name="user_sex">性别</string>
    <string name="user_school">学校</string>
    <string name="user_phone">电话</string>
    <string name="user_wander">兼职</string>
    <string name="user_secret">隐私</string>
    <string name="user_synopsis">简介</string>
    <string name="user_height">身高</string>
    <string name="user_weight">体重</string>
    <string name="no_authentication">未认证</string>
    <string name="identitycard">身份证认证</string>
    <string name="businesslicense">营业执照认证</string>
    <string name="sj">商家</string>
    <string name="gr">个人</string>
    <string name="check">查看</string>
    <string name="gonzi">工资待遇</string>
    <string name="jobtime">工作日期</string>
    <string name="paytype">结算方式</string>
    <string name="paytime">结算日期</string>
    <string name="jobtime2">工作时间</string>
    <string name="job_show">职位描述</string>
    <string name="job_address">工作地址</string>
    <string name="company_address">联系地址</string>
    <string name="job_contact">联系人</string>
    <string name="job_phone">联系电话</string>
    <string name="job_get">申请兼职</string>
    <string name="job_get_ok">已申请</string>
    <string name="job_get_finish">已招满啦</string>
    <string name="wage_hour">元/时</string>
    <string name="wage_days">元/日</string>
    <string name="wage_empty">面议</string>
    <string name="hint_phone">联系电话申请兼职才能查看哦</string>
    <string name="wait">请求已发送，请稍后!</string>
    <string name="network_error">服务器离家出走了，请稍后再试</string>
    <string name="server_error">服务器翘课啦！请稍后再试</string>
    <string name="json_error">数据分析异常</string>
    <string name="company_msg">公司信息</string>
    <string name="like">关注</string>
    <string name="dislike">取消关注</string>
    <string name="company_alljob">TA发布的所有兼职</string>
    <string name="company_shortage">TA的简介</string>
    <string name="commentary">评论</string>
    <string name="commentary_detail">评分详情</string>
    <string name="commentary1">评论我的</string>
    <string name="commentary_ok">已评论</string>
    <string name="commentaryrank">综合评分</string>
    <string name="rank">评分</string>
    <string name="has_new_version">发现新版本，是否立即更新？</string>
    <string name="is_updating">正在更新，请稍候...</string>
    <string name="current_is_new_version">当前已是最新版本</string>
    <string name="login">登录</string>
    <string name="forget_password_tips">忘记密码</string>
    <string name="register">注册</string>
    <string name="input_validate_code">短信验证码</string>
    <string name="reset_password">重置密码</string>
    <string name="student">学生</string>
    <string name="experience">兼职故事</string>
    <string name="experience_detail">兼职故事图片</string>
    <string name="realpic_detail">实地认证图片</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="mod_ok">更新成功！</string>
    <string name="mod_bad">更新失败！请稍后再试</string>
    <string name="notice_sound">消息提示音</string>
    <string name="clear_cache">清空缓存</string>
    <string name="check_update">检查更新</string>
    <string name="user_feedback">用户反馈</string>
    <string name="share">分享</string>
    <string name="about">关于</string>
    <string name="exit">退出软件</string>
    <string name="change_password">修改密码</string>
    <string name="remove_login">退出账号</string>
    <string name="protocal">点击-x,即表示同意</string>
    <string name="protocalbtn">【跑跑兼职服务协议】</string>
    <string name="changephone">更换手机号</string>
    <string name="invite_ept">邀请码选填</string>
    <string name="goright">立即体验</string>
    <string name="wallettxt1">我的钱包\u0009\u0009隆重上线</string>
    <string name="wallettxt2">进入钱包领工资，还有各种活动红包、现金奖励哦！</string>
</resources>