<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/app_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@android:color/transparent" style="@style/title_Bar">
        <Button android:id="@+id/back" android:background="@drawable/com_navbar_btn_back_selector" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:onClick="onBack" style="@style/padingstyle" />
        <TextView android:textColor="@color/app_text_second_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/regist_title" android:layout_centerVertical="true" style="@style/app_title_text" />
    </RelativeLayout>
    <LinearLayout style="@style/main_container">
        <LinearLayout android:orientation="vertical" android:background="@drawable/com_function_white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
            <EditText android:textSize="14.0sp" android:textColorHint="@color/app_hint_color" android:id="@+id/register_username" android:hint="@string/phone_hint" android:maxLength="11" android:inputType="phone" style="@style/register_edittext_style" />
            <View android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" style="@style/divider" />
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="40.0dip">
                <Button android:textSize="12.0sp" android:textColor="@drawable/com_textcolor2_selector" android:id="@+id/register_get_validate_code" android:background="@drawable/com_solidbutton_selector" android:paddingLeft="10.0dip" android:paddingTop="8.0dip" android:paddingRight="10.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8.0dip" android:text="@string/get_validate_code" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                <EditText android:textColorHint="@color/app_hint_color" android:id="@+id/register_validate_code" android:background="@android:color/transparent" android:hint="@string/input_validate_code" android:layout_toLeftOf="@+id/register_get_validate_code" style="@style/register_edittext_style" />
            </RelativeLayout>
            <View android:layout_marginLeft="16.0dip" android:layout_marginRight="100.0dip" style="@style/divider" />
            <EditText android:textColorHint="@color/app_hint_color" android:id="@+id/register_password" android:hint="@string/password_hint" android:maxLength="12" android:inputType="textPassword" style="@style/register_edittext_style" />
            <View android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" style="@style/divider" />
            <EditText android:textColorHint="@color/app_hint_color" android:id="@+id/register_confirm_password" android:hint="@string/repassword_hint" android:maxLength="12" android:inputType="textPassword" style="@style/register_edittext_style" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:background="@drawable/com_function_white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
            <EditText android:textSize="14.0sp" android:textColorHint="@color/app_hint_color" android:id="@+id/register_invite_code" android:hint="@string/invite_hint" android:maxLength="11" android:inputType="text" style="@style/register_edittext_style" />
        </LinearLayout>
        <View android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" style="@style/divider" />
        <TextView android:textSize="12.0sp" android:textColor="@color/app_hint_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="44.0dip" android:layout_marginLeft="16.0dip" android:text="@string/invite_ept" />
        <Button android:textColor="@color/app_white" android:id="@+id/register_submit" android:background="@drawable/com_solidbutton_selector" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/next_step" android:onClick="onClick" style="@style/layout_magin" />
        <RelativeLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
            <TextView android:textSize="12.0sp" android:textColor="@color/app_text_second_color" android:id="@+id/kit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/protocal" />
            <Button android:textSize="12.0sp" android:textColor="@color/app_title_bg_color" android:id="@+id/protocalbtn" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/protocalbtn" android:layout_toRightOf="@+id/kit" android:onClick="onClick" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
