<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/app_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/main_top_container" android:background="@android:color/transparent" style="@style/title_Bar">
        <Button android:id="@id/back" android:background="@drawable/com_navbar_btn_back_selector" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:onClick="onBack" style="@style/padingstyle" />
        <TextView android:textColor="@color/app_text_second_color" android:id="@id/title_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/forget_password_tips" android:layout_centerVertical="true" style="@style/app_title_text" />
    </RelativeLayout>
    <LinearLayout style="@style/main_container">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="80.0dip">
            <EditText android:id="@+id/register_telephone" android:hint="@string/phone_hint" android:maxLength="11" android:inputType="phone" style="@style/register_edittext_style" />
            <View style="@style/divider" />
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="40.0dip">
                <Button android:textColor="@drawable/com_textcolor2_selector" android:id="@+id/register_get_validate_code" android:background="@drawable/com_solidbutton_selector" android:paddingLeft="10.0dip" android:paddingTop="5.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8.0dip" android:text="@string/get_validate_code" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                <EditText android:id="@+id/register_validate_code" android:background="@android:color/transparent" android:hint="@string/input_validate_code" android:layout_toLeftOf="@id/register_get_validate_code" style="@style/register_edittext_style" />
            </RelativeLayout>
            <View style="@style/divider" />
            <EditText android:id="@+id/register_password" android:hint="@string/password_hint" android:maxLength="12" android:inputType="textPassword" style="@style/register_edittext_style" />
            <View style="@style/divider" />
            <EditText android:id="@+id/register_confirm_password" android:hint="@string/repassword_hint" android:maxLength="12" android:inputType="textPassword" style="@style/register_edittext_style" />
        </LinearLayout>
        <View style="@style/divider" />
        <Button android:textColor="@drawable/com_textcolor2_selector" android:id="@+id/register_submit" android:text="@string/reset_password" android:onClick="onClick" style="@style/submit" />
    </LinearLayout>
</RelativeLayout>
