<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/app_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/main_top_container" android:background="@android:color/transparent" style="@style/title_Bar">
        <Button android:id="@+id/back" android:background="@drawable/com_navbar_btn_back_selector" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:onClick="onBack" style="@style/padingstyle" />
        <TextView android:textColor="@color/app_text_second_color" android:id="@id/title_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/md_password" android:layout_centerVertical="true" style="@style/app_title_text" />
        <ImageView android:id="@id/loading" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:src="@drawable/com_loding_white_small" android:layout_toRightOf="@id/title_name" android:layout_centerVertical="true" />
    </RelativeLayout>
    <LinearLayout style="@style/main_container">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="80.0dip">
            <EditText android:id="@+id/old_password" android:hint="@string/oldPassword" android:inputType="textPassword" style="@style/register_edittext_style" />
            <View android:layout_marginLeft="25.0dip" style="@style/divider" />
            <EditText android:id="@+id/register_password" android:hint="@string/password_hint" android:maxLength="12" android:inputType="textPassword" style="@style/register_edittext_style" />
            <View android:layout_marginLeft="25.0dip" style="@style/divider" />
            <EditText android:id="@+id/register_confirm_password" android:hint="@string/repassword_hint" android:maxLength="12" android:inputType="textPassword" style="@style/register_edittext_style" />
        </LinearLayout>
        <View android:layout_marginLeft="25.0dip" style="@style/divider" />
        <Button android:textColor="@drawable/com_textcolor2_selector" android:id="@+id/submit" android:background="@drawable/com_solidbutton_selector" android:text="@string/md_password" android:onClick="onClick" style="@style/submit" />
    </LinearLayout>
</RelativeLayout>
