<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@color/app_white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textSize="16.0sp" android:textColor="@drawable/com_textblue_selector" android:gravity="center" android:id="@+id/next_btn" android:background="@drawable/introduction_btn_enter_selector" android:visibility="invisible" android:layout_width="180.0dip" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/goright" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    <LinearLayout android:orientation="vertical" android:id="@+id/textContainer" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:layout_above="@id/next_btn">
        <TextView android:textSize="32.0sp" android:textColor="@color/app_text_color" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wallettxt1" />
        <TextView android:textSize="13.0sp" android:textColor="@color/app_text_color" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/wallettxt2" />
    </LinearLayout>
    <ImageView android:id="@+id/img_c" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="24.0dip" android:src="@drawable/introduction_image_wallet" android:layout_above="@id/textContainer" android:layout_centerHorizontal="true" android:contentDescription="@string/pic" />
    <RelativeLayout android:layout_width="280.0dip" android:layout_height="400.0dip" android:layout_marginBottom="130.0dip" android:layout_above="@id/textContainer" android:layout_centerHorizontal="true">
        <ImageView android:id="@+id/introduction_image_salary" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:src="@drawable/introduction_image_salary" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:contentDescription="@string/pic" />
        <ImageView android:id="@+id/introduction_image_gift" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="60.0dip" android:layout_marginBottom="4.0dip" android:src="@drawable/introduction_image_gift" android:layout_above="@id/introduction_image_salary" android:layout_alignParentLeft="true" android:contentDescription="@string/pic" />
        <ImageView android:id="@+id/introduction_image_red_package" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="60.0dip" android:layout_marginBottom="12.0dip" android:src="@drawable/introduction_image_red_package" android:layout_above="@id/introduction_image_salary" android:layout_alignParentRight="true" android:contentDescription="@string/pic" />
        <ImageView android:id="@+id/introduction_image_green" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="88.0dip" android:layout_marginBottom="8.0dip" android:src="@drawable/introduction_image_green" android:layout_above="@id/introduction_image_red_package" android:contentDescription="@string/pic" />
        <ImageView android:id="@+id/introduction_image_yellow" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="88.0dip" android:layout_marginBottom="8.0dip" android:src="@drawable/introduction_image_yellow" android:layout_above="@id/introduction_image_green" android:layout_alignParentRight="true" android:contentDescription="@string/pic" />
        <ImageView android:id="@+id/introduction_image_blue" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:src="@drawable/introduction_image_blue" android:layout_above="@id/introduction_image_yellow" android:layout_centerHorizontal="true" android:contentDescription="@string/pic" />
    </RelativeLayout>
</RelativeLayout>
